# FreeRDP

./: config.h.in  config.ini  events-logger.ini  freerdp-proxy  pf_client.c  pf_config.h  pf_context.h  pf_server.c
channels/cliprdr/: cliprdr_common.c
channels/cliprdr/client/: cliprdr_main.c
channels/disp/client/: disp_main.c
channels/drdynvc/client/: drdynvc_main.c
channels/mfa/: CMakeLists.txt  ChannelOptions.cmake
channels/mfa/server/: CMakeLists.txt  mfa_main.c  mfa_main.h
channels/passthrough/: CMakeLists.txt  ChannelOptions.cmake
channels/passthrough/client/: CMakeLists.txt  passthrough_main.c  passthrough_main.h
channels/passthrough/server/: CMakeLists.txt  passthrough_main.c  passthrough_main.h
channels/rail/: rail_common.c
channels/rail/client/: rail_main.c  rail_orders.c  rail_orders.h
channels/rdpsnd/client/: CMakeLists.txt  rdpsnd_main.c
channels/server/: channels.c
channels/smartcard/client/: smartcard_pack.c
client/: CMakeLists.txt
client/Sample/: tf_freerdp.c
client/Windows/: wf_rail.c
client/X11/: xf_client.c  xf_rail.c
client/common/: cmdline.c
cmake/: Finduwsc.cmake
include/freerdp/: freerdp.h  peer.h  rail.h  window.h
include/freerdp/channels/: mfa.h  wtsvc.h
include/freerdp/client/: disp.h  passthrough.h  rail.h
include/freerdp/codec/: clear.h  nsc.h  progressive.h  rfx.h
include/freerdp/server/: mfa.h  passthrough.h
libfreerdp/: CMakeLists.txt
libfreerdp/codec/: clear.c  nsc.c  progressive.c  rfx.c
libfreerdp/core/: CMakeLists.txt  autodetect.c  certificate.c  certificate.h  channels.c  channels.h  client.c  codecs.c  connection.c  freerdp.c  gcc.c  info.c  license.c  message.c  nla.c  peer.c  rdp.c  rdp.h  redirection.c  server.c  settings.c  transport.c  update.c  window.c
libfreerdp/core/gateway/: rdg.c  rpc_client.c
libfreerdp/gdi/: gdi.c
modules/events-logger/: CMakeLists.txt  logger.cpp
modules/mfa/: mfa.c  token_validator.h
server/Sample/: sfreerdp.c
server/proxy/: CMakeLists.txt  clipboard_state.c  clipboard_state.h  config.ini  events-logger.ini  freerdp_proxy.c  mfa.ini  pf_bkey.c  pf_bkey.h  pf_capture.c  pf_channels.c  pf_channels.h  pf_client.c  pf_client.h  pf_cliprdr.c  pf_cliprdr.h  pf_config.c  pf_config.h  pf_context.c  pf_context.h  pf_disp.c  pf_input.c  pf_modules.c  pf_modules.h  pf_rdpgfx.c  pf_server.c  pf_stealer.c  pf_stealer.h  pf_update.c
server/proxy/modules/: CMakeLists.txt  modules_api.h
server/proxy/modules/bulbul/: CMakeLists.txt  demo.cpp
server/proxy/modules/capture/: CMakeLists.txt  cap_main.c  pf_capture.c
server/proxy/modules/clipboard/: CMakeLists.txt  clipboard.c
server/proxy/modules/demo/: CMakeLists.txt  demo.cpp
server/proxy/modules/drdynvc-filter/: CMakeLists.txt  drdynvc_filter.cpp
server/proxy/modules/events-logger/: CMakeLists.txt  logger.cpp
server/proxy/modules/fw/: CMakeLists.txt  firewall.c
server/proxy/modules/logger/: CMakeLists.txt  logger.cpp
server/proxy/modules/mfa/: CMakeLists.txt  mfa.c  mfa.h  token_validator.c  token_validator.h
server/proxy/modules/router/: CMakeLists.txt  router.cpp
server/shadow/: shadow_encoder.c
winpr/include/winpr/: bitstream.h  image.h  print.h  wlog.h
winpr/libwinpr/utils/: cmdline.c  debug.c  image.c  print.c
winpr/libwinpr/utils/collections/: BitStream.c
winpr/libwinpr/utils/test/: TestCmdLine.c
winpr/libwinpr/utils/wlog/: Appender.c  CallbackAppender.c  FileAppender.c  Layout.c  wlog.c  wlog.h
